--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -18,20 +18,20 @@
  *  Version: 0.3.0
  *
  * ------------------------------------------------------- */
-@import url(https://fonts.googleapis.com/css?family=Montserrat:300,300i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Droid+Mono&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
 
 :root {
   /* Fonts */
-  --text-font-family: Montserrat;
+  --text-font-family: 'Noto Sans';
   --text-font-is-google: 1;
   --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: 'Josefin Sans';
+  --header-font-family: Cabin;
   --header-font-is-google: 1;
-  --code-font-family: 'Droid Mono';
+  --code-font-family: 'Source Code Pro';
   --code-font-is-google: 1;
   --base-font-size: 20px;
   --text-font-size: 1rem;
@@ -42,22 +42,23 @@
   --header-h3-font-size: 1.75rem;
 
   /* Colors */
-  --text-color: #0C3E4F;
-  --header-color: #125972;
-  --background-color: #E7EEF0;
-  --link-color: #197b9e;
-  --text-bold-color: #125972;
-  --code-highlight-color: #c0e8f5;
-  --inverse-text-color: #E7EEF0;
-  --inverse-background-color: #125972;
-  --inverse-header-color: #E7EEF0;
-  --title-slide-background-color: #125972;
-  --title-slide-text-color: #E7EEF0;
-  --header-background-color: #125972;
-  --header-background-text-color: #E7EEF0;
-  --base: #125972;
-  --white: #E7EEF0;
-  --black: #0C3E4F;
+  --text-color: #000000;
+  --header-color: #1381B0;
+  --background-color: #FFFFFF;
+  --link-color: #1381B0;
+  --text-bold-color: #1381B0;
+  --code-highlight-color: rgba(255,255,0,0.5);
+  --inverse-text-color: #000000;
+  --inverse-background-color: #FF961C;
+  --inverse-header-color: #FFFFFF;
+  --title-slide-background-color: #1381B0;
+  --title-slide-text-color: #000000;
+  --header-background-color: #1381B0;
+  --header-background-text-color: #FFFFFF;
+  --primary: #1381B0;
+  --secondary: #FF961C;
+  --white: #FFFFFF;
+  --black: #000000;
 }
 
 html {
@@ -66,7 +67,7 @@ html {
 
 body {
   font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
-  font-weight: 300;
+  font-weight: normal;
   color: var(--text-color);
 }
 h1, h2, h3 {
@@ -98,10 +99,10 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #125972;
+  color: #1381B0;
 }
 .remark-slide-number {
-  color: #125972;
+  color: #1381B0;
   opacity: 1;
   font-size: 0.9em;
 }
@@ -143,10 +144,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #12597299;
+  color: #1381B099;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #125972;
+  color: #1381B0;
 }
 .right-column {
   width: 75%;
@@ -168,7 +169,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #12597280;
+  border-left: solid 5px #FF961C80;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -183,7 +184,7 @@ th, td {
   padding: 5px;
 }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) {
-  background: #CFDDE2;
+  background: #FFEAD1;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -193,7 +194,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #CFDDE2;
+  background-color: #FFEAD1;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -233,11 +234,17 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   }
 }
 
-.base {
-  color: var(--base);
+.primary {
+  color: var(--primary);
 }
-.bg-base {
-  background-color: var(--base);
+.bg-primary {
+  background-color: var(--primary);
+}
+.secondary {
+  color: var(--secondary);
+}
+.bg-secondary {
+  background-color: var(--secondary);
 }
 .white {
   color: var(--white);
